# SGP40-Pico

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SGP40.cpp  SGP40.h
